@@ -84,8 +84,6 @@ public class UserDataAccess implements UserDataAccessInterface{
      * "0000001","student","password","PET ID:0001$PET ID:0002","0$0$0"
      * 0,         1,         2,       3,           4
      */
-    static String defaultUserID = "00000001";
-    static String defaultPetID = "00000001";
     static String defaultReportCount = "0$0$0";
     static String filename = "src/main/java/data/userData";
     @Override
@@ -93,6 +91,7 @@ public class UserDataAccess implements UserDataAccessInterface{
         FileReader fr = new FileReader(filename);
         BufferedReader br = new BufferedReader(fr);
         String line;
+        br.readLine();//skip the header
         ArrayList<String> value = new ArrayList<String>();
         while ((line = br.readLine()) != null) {
             String[] a = line.split(",");
@@ -116,15 +115,17 @@ public class UserDataAccess implements UserDataAccessInterface{
         BufferedReader br = new BufferedReader(fr);
         String line;
         ArrayList<String> value = new ArrayList<String>();
+        br.readLine();//skips the header
         while((line = br.readLine()) != null){
-            value.addAll(Arrays.asList(line.split(",")));
+            String[] a = line.split(",");
+            value.addAll(List.of(a));
         }
         br.close();
         fr.close();
         int i = 1;
         while (i + 4 <= value.size()){
             if (Objects.equals(value.get(i), username)){
-                return new User(value.get(i - 1), username, value.get(i + 2), value.get(i+3), value.get(i+4));
+                return new User(value.get(i - 1), username, value.get(i + 1), value.get(i+2), value.get(i+3));
             }
             i += 5;
         }
@@ -137,8 +138,10 @@ public class UserDataAccess implements UserDataAccessInterface{
         BufferedReader br = new BufferedReader(fr);
         String line;
         ArrayList<String> value = new ArrayList<String>();
+        br.readLine();//skips the header
         while((line = br.readLine()) != null){
-            value.addAll(Arrays.asList(line.split(",")));
+            String[] a = line.split(",");
+            value.addAll(List.of(a));
         }
         br.close();
         fr.close();
@@ -178,9 +181,11 @@ public class UserDataAccess implements UserDataAccessInterface{
         FileReader fr = new FileReader(filename);
         BufferedReader br = new BufferedReader(fr);
         String line;
+        br.readLine();//skip the header
         ArrayList<String> value = new ArrayList<String>();
         while((line = br.readLine()) != null){
-            value.addAll(Arrays.asList(line.split(",")));
+            String[] a = line.split(",");
+            value.addAll(List.of(a));
         }
         br.close();
         fr.close();
@@ -192,9 +197,11 @@ public class UserDataAccess implements UserDataAccessInterface{
         FileReader fr = new FileReader(filename);
         BufferedReader br = new BufferedReader(fr);
         String line;
+        br.readLine();//skip the header
         ArrayList<String> value = new ArrayList<String>();
         while((line = br.readLine()) != null){
-            value.addAll(Arrays.asList(line.split(",")));
+            String[] a = line.split(",");
+            value.addAll(List.of(a));
         }
         br.close();
         fr.close();
@@ -213,9 +220,11 @@ public class UserDataAccess implements UserDataAccessInterface{
         FileReader fr = new FileReader(filename);
         BufferedReader br = new BufferedReader(fr);
         String line;
+        br.readLine();//skip the header
         ArrayList<String> value = new ArrayList<String>();
         while((line = br.readLine()) != null){
-            value.addAll(Arrays.asList(line.split(",")));
+            String[] a = line.split(",");
+            value.addAll(List.of(a));
         }
         br.close();
         fr.close();
@@ -223,7 +232,7 @@ public class UserDataAccess implements UserDataAccessInterface{
         boolean flag = false;
         while (i + 4 <= value.size() && !flag) {
             if (Objects.equals(value.get(i), username)) {
-                value.subList(i - 1, i + 5).clear();
+                value.subList(i - 1, i + 3).clear();
                 flag = true;
             }
             i += 5;
